[gd_scene load_steps=8 format=3 uid="uid://dnq8us454ub37"]

[ext_resource type="Script" uid="uid://x3es5m4nait7" path="res://scripts+scenes/choose_bid.gd" id="1_3ayqx"]
[ext_resource type="FontFile" uid="uid://bvcu4crixhcdc" path="res://fonts/AdabelleHandwriting-Regular.ttf" id="2_8ktld"]
[ext_resource type="StyleBox" uid="uid://he5q8pyshfjg" path="res://styles/white_round_box.tres" id="3_jfoje"]
[ext_resource type="Script" uid="uid://b650q5s22g6ox" path="res://scripts+scenes/betting_number.gd" id="4_xosn5"]
[ext_resource type="Texture2D" uid="uid://ctvx7tq4l13ho" path="res://art/filler/star_mouse.png" id="5_jfoje"]
[ext_resource type="Texture2D" uid="uid://b8k3l187drlp" path="res://art/filler/star_bg.png" id="6_jfoje"]
[ext_resource type="StyleBox" uid="uid://cnsrv7gogrl" path="res://styles/yellow_round_box.tres" id="7_xosn5"]

[node name="ChooseBid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ayqx")

[node name="ColorRect" type="TextureRect" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_jfoje")

[node name="HowMany" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.352
anchor_top = 0.173
anchor_right = 0.657
anchor_bottom = 0.261
offset_left = -10.504
offset_top = -0.104004
offset_right = 0.135986
offset_bottom = -0.128006
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 50
text = "How many?"
horizontal_alignment = 1

[node name="BettingNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -136.0
offset_right = 108.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("3_jfoje")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_xosn5")

[node name="CoinCount" type="Control" parent="."]
anchors_preset = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 59.0
offset_bottom = 59.0

[node name="P1CoinCount" type="Label" parent="CoinCount"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.352
anchor_top = 0.173
anchor_right = 0.657
anchor_bottom = 0.261
offset_left = 184.92
offset_top = -4.92
offset_right = 422.72
offset_bottom = 48.56
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 50
text = "P1 Coins Left:"
horizontal_alignment = 1

[node name="P2CoinCount" type="Label" parent="CoinCount"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.352
anchor_top = 0.173
anchor_right = 0.657
anchor_bottom = 0.261
offset_left = 655.92
offset_top = 0.0800004
offset_right = 893.72
offset_bottom = 53.56
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 50
text = "P1 Coins Left:"
horizontal_alignment = 1

[node name="Star" type="TextureRect" parent="CoinCount"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.55
anchor_top = 1.525
anchor_right = 4.694
anchor_bottom = 3.3
offset_left = 128.0
offset_right = 126.24
texture = ExtResource("5_jfoje")
expand_mode = 1
stretch_mode = 4

[node name="Star2" type="TextureRect" parent="CoinCount"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.175
anchor_top = 1.525
anchor_right = 3.975
anchor_bottom = 4.15
offset_left = 763.0
offset_top = 3.0
offset_right = 727.0
offset_bottom = -36.0
texture = ExtResource("5_jfoje")
expand_mode = 1
stretch_mode = 4

[node name="Up" type="Button" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.631
anchor_top = 0.346
anchor_right = 0.704
anchor_bottom = 0.469
offset_left = 0.0879517
offset_top = -0.208008
offset_right = -0.00805664
offset_bottom = 0.0879822
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = ExtResource("7_xosn5")
theme_override_styles/pressed = ExtResource("7_xosn5")
theme_override_styles/normal = ExtResource("3_jfoje")
text = "^"

[node name="Ok" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 0
offset_left = 541.0
offset_top = 397.0
offset_right = 625.0
offset_bottom = 477.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_jfoje")
text = "Ok"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = 170.0
offset_right = 292.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8ktld")
theme_override_font_sizes/font_size = 50
text = "(Press Space to proceed)"
horizontal_alignment = 1

[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Ok" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Ok" to="." method="_on_ok_pressed"]
